[gd_scene load_steps=3 format=2]

[ext_resource path="res://games/2d_mad_max_original/assets/maps/traps/landmine/landmine.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 5 )

[node name="landmine" type="Area2D"]
gravity_vec = Vector2( 0, 0 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PoolVector2Array( -5, -5, 5, -5, 5, 5, -5, 5 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
z_index = -1
emitting = false
amount = 1000
one_shot = true
speed_scale = 3.0
explosiveness = 1.0
randomness = 0.2
lifetime_randomness = 0.5
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 75.0
initial_velocity_random = 1.0
scale_amount = 3.0
scale_amount_random = 1.0
color = Color( 1, 0.352941, 0, 1 )
hue_variation = -0.1
hue_variation_random = 1.0

[node name="particleTimer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_landmine_body_entered"]
[connection signal="timeout" from="particleTimer" to="." method="_on_particleTimer_timeout"]
